[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battleship_game_lib = { path = "../../battleship_game_lib" }
tonic = "0.11.0"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
prost = "0.12.3"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11.0"